apex-libraries/sfdx-source/at4dx/main/schema/objects/SelectorConfig_FieldSetInclusion__mdt/SelectorConfig_FieldSetInclusion__mdt.object-meta.xml
<CustomObject>
    <description>Defines a SObject fieldset that should be added to a selector&#39;s defined fields.</description>
    <label>Selector Config - Fieldset Inclusion</label>
    <pluralLabel>Selector Config - Fieldset Inclusions</pluralLabel>
</CustomObject>