apex-libraries/sfdx-source/at4dx/main/schema/objects/SelectorConfig_FieldSetInclusion__mdt/fields/BindingSObject__c.field-meta.xml
<CustomField>
    <fullName>BindingSObject__c</fullName>
    <description
    >Specifies the selector, via the SObject Type, to which the fieldset&#39;s items will be added.</description>
    <inlineHelpText
    >Specifies the selector, via the SObject Type, to which the fieldset&#39;s items will be added.</inlineHelpText>
    <label>Binding SObject</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Selector_Config_Fieldset_Inclusions</relationshipLabel>
    <relationshipName>Selector_Config_Fieldset_Inclusions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>