apex-libraries/sfdx-source/at4dx/main/schema/objects/SelectorConfig_FieldSetInclusion__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description
    >If checked (true), the fieldset&#39;s items will be added to the respective selector.  Otherwise, the fieldset will be ignored.</description>
    <inlineHelpText
    >If checked (true), the fieldset&#39;s items will be added to the respective selector.  Otherwise, the fieldset will be ignored.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>