apex-libraries/sfdx-source/at4dx/main/schema/objects/SelectorConfig_FieldSetInclusion__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>BindingSObject__c</columns>
    <columns>BindingSObjectAlternate__c</columns>
    <columns>FieldsetName__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>